projeto lojinha de café(estudos)
adicionando mais coisas no projeto!!

--- a/Loja de café/index.html
+++ b/Loja de café/index.html
@@ -81,3 +81,81 @@
     </div>
 
 </header>
+
+<section class="home" id="home">
+    <div class="content">
+        <h3>fresh coffe in the morning</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque incidunt nisi, esse ipsum, quam delectus error consequuntur nobis perferendis omnis accusamus facilis sapiente, vitae quia odit magnam nam exercitationem obcaecati!</p>
+        <a href="#" class="btn">get yours now</a>
+    </div>
+
+</section>
+
+<section class="about" id="about">
+
+    <h1 class="heading"><span>about</span>us</h1>
+
+    <div class="row">
+        <div class="image">
+            <img src="images/about-img.jpeg" alt="">
+        </div>
+        <div class="content">
+            <h3>what makes our coffe special?</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio rerum illo laborum quod fugit, reprehenderit exercitationem officiis amet iste, possimus deserunt recusandae ex necessitatibus quam repudiandae voluptatem quia magnam cumque.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, a doloremque dolores perspiciatis architecto deleniti totam debitis alias beatae praesentium, eius dolor placeat dolorem molestiae quaerat expedita adipisci distinctio sit.</p>
+            <a href="#"class="btn">learn more</a>
+        </div>
+    </div>
+</section>
+
+<section class="menu" id="menu">
+
+    <h1 class="heading"> our <span>menu</span> </h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <img src="images/menu-1.png" alt="">
+            <h3>tasty and healty</h3>
+            <div class="price">$15.99 <span>20.99</span></div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+            <img src="images/menu-2.png" alt="">
+            <h3>tasty and healty</h3>
+            <div class="price">$15.99 <span>20.99</span></div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+            <img src="images/menu-3.png" alt="">
+            <h3>tasty and healty</h3>
+            <div class="price">$15.99 <span>20.99</span></div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+            <img src="images/menu-4.png" alt="">
+            <h3>tasty and healty</h3>
+            <div class="price">$15.99 <span>20.99</span></div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+            <img src="images/menu-5.png" alt="">
+            <h3>tasty and healty</h3>
+            <div class="price">$15.99 <span>20.99</span></div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+            <img src="images/menu-6.png" alt="">
+            <h3>tasty and healty</h3>
+            <div class="price">$15.99 <span>20.99</span></div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+
+    </div>
+
+</section>
